--- a/main.tex
+++ b/main.tex
@@ -37,9 +37,11 @@
 \usepackage{microtype}
 
 \usepackage{minted} % Code listing with reasonable good highlighting
-\usepackage{bussproofs}   % For typing judgments
+%\usepackage{bussproofs}   % For typing judgments
 \usepackage[no-math]{fontspec}
 \setmonofont[Scale=MatchLowercase]{Apple Symbols} % Unicode mono font
+
+%\usepackage{mathptmx} % Times new roman font
 
 \usepackage[dvipsnames]{xcolor}  		% Color package
 \definecolor{dgreen}{rgb}{0.,0.6,0.}    % Deep green
@@ -105,8 +107,8 @@
 %         \oldbibitem}
 % \makeatother
 
-\usepackage{flushend}
-%\usepackage{balance}
+%\usepackage{flushend}
+\usepackage{balance}
 
 \begin{document}
 \toappear{}
@@ -114,15 +116,11 @@
 \setlength{\pdfpageheight}{\paperheight}
 \setlength{\pdfpagewidth}{\paperwidth}
 
-\conferenceinfo{CONF 'yy}{Month d--d, 20yy, City, ST, Country} 
-\copyrightyear{20yy} 
-\copyrightdata{978-1-nnnn-nnnn-n/yy/mm} 
-\doi{nnnnnnn.nnnnnnn}
-
-% \conferenceinfo{TYDE '16}{Sept d--d, 2016, Nara, ST, Japan} 
+% \vspace{-2mm}
+% \conferenceinfo{TyDe'16} {September 18 2016, Nara, Japan}
 % \copyrightyear{2016} 
-% \copyrightdata{978-1-nnnn-nnnn-n/yy/mm} 
-% \doi{nnnnnnn.nnnnnnn}
+% \copyrightdata{978-1-4503-4435-7/16/09} 
+% \doi{2976022.2976026}
 
 % Uncomment one of the following two, if you are not going for the 
 % traditional copyright transfer agreement.
@@ -143,9 +141,6 @@
 \authorinfo{Marco Vassena}
            {Chalmers University, Sweden}
            {vassena@chalmers.se}
-% \authorinfo{Name2\and Name3}
-%            {Affiliation2/3}
-%            {Email2/3}
 
 \maketitle
 
@@ -2360,15 +2355,211 @@ world data as future work.
   improved the paper and the reviewers for their valuable feedback.  }
 % Acknowledgments, if needed.
 
-% We recommend abbrvnat bibliography style.
+% The bibliography should be embedded for final submission.
+\begin{thebibliography}{22}
+\providecommand{\natexlab}[1]{#1}
+\providecommand{\url}[1]{\texttt{#1}}
+\expandafter\ifx\csname urlstyle\endcsname\relax
+  \providecommand{\doi}[1]{doi: #1}\else
+  \providecommand{\doi}{doi: \begingroup \urlstyle{rm}\Url}\fi
 
+\bibitem[Angiuli et~al.(2014)Angiuli, Morehouse, Licata, and
+  Harper]{HomoPatchTheory}
+C.~Angiuli, E.~Morehouse, D.~R. Licata, and R.~Harper.
+\newblock Homotopical patch theory.
+\newblock In \emph{Proceedings of the 19th ACM SIGPLAN International Conference
+  on Functional Programming}, ICFP '14, pages 243--256, New York, NY, USA,
+  2014. ACM.
+\newblock ISBN 978-1-4503-2873-9.
+\newblock \doi{10.1145/2628136.2628158}.
+\newblock URL \url{http://doi.acm.org/10.1145/2628136.2628158}.
+
+\bibitem[Apel et~al.(2011)Apel, Liebig, Brandl, Lengauer, and
+  K\"{a}stner]{Apel11}
+S.~Apel, J.~Liebig, B.~Brandl, C.~Lengauer, and C.~K\"{a}stner.
+\newblock Semistructured merge: Rethinking merge in revision control systems.
+\newblock In \emph{Proceedings of the 19th ACM SIGSOFT Symposium and the 13th
+  European Conference on Foundations of Software Engineering}, ESEC/FSE '11,
+  pages 190--200, New York, NY, USA, 2011. ACM.
+\newblock ISBN 978-1-4503-0443-6.
+\newblock \doi{10.1145/2025113.2025141}.
+\newblock URL \url{http://doi.acm.org/10.1145/2025113.2025141}.
+
+\bibitem[Balasubramaniam and Pierce(1998)]{Pierce98}
+S.~Balasubramaniam and B.~C. Pierce.
+\newblock What is a file synchronizer?
+\newblock In \emph{Proceedings of the 4th Annual ACM/IEEE International
+  Conference on Mobile Computing and Networking}, MobiCom '98, pages 98--108,
+  New York, NY, USA, 1998. ACM.
+\newblock ISBN 1-58113-035-X.
+\newblock \doi{10.1145/288235.288261}.
+\newblock URL \url{http://doi.acm.org/10.1145/288235.288261}.
+
+\bibitem[Bergroth et~al.(2000)Bergroth, Hakonen, and Raita]{Berg00}
+L.~Bergroth, H.~Hakonen, and T.~Raita.
+\newblock A survey of longest common subsequence algorithms.
+\newblock In \emph{Proceedings of the Seventh International Symposium on String
+  Processing Information Retrieval (SPIRE'00)}, SPIRE '00, pages 39--,
+  Washington, DC, USA, 2000. IEEE Computer Society.
+\newblock ISBN 0-7695-0746-8.
+\newblock URL \url{http://dl.acm.org/citation.cfm?id=829519.830817}.
+
+\bibitem[Bove et~al.(2009)Bove, Dybjer, and Norell]{Bove09}
+A.~Bove, P.~Dybjer, and U.~Norell.
+\newblock A brief overview of agda --- a functional language with dependent
+  types.
+\newblock In \emph{Proceedings of the 22Nd International Conference on Theorem
+  Proving in Higher Order Logics}, TPHOLs '09, pages 73--78, Berlin,
+  Heidelberg, 2009. Springer-Verlag.
+\newblock ISBN 978-3-642-03358-2.
+\newblock \doi{10.1007/978-3-642-03359-9_6}.
+\newblock URL \url{http://dx.doi.org/10.1007/978-3-642-03359-9_6}.
+
+\bibitem[Chacon(2009)]{Git}
+S.~Chacon.
+\newblock \emph{Pro Git}.
+\newblock Apress, Berkely, CA, USA, 1st edition, 2009.
+\newblock ISBN 1430218339, 9781430218333.
+
+\bibitem[Chawathe and Garcia-Molina(1997)]{Chawathe97}
+S.~S. Chawathe and H.~Garcia-Molina.
+\newblock Meaningful change detection in structured data.
+\newblock \emph{SIGMOD Rec.}, 26\penalty0 (2):\penalty0 26--37, June 1997.
+\newblock ISSN 0163-5808.
+\newblock \doi{10.1145/253262.253266}.
+\newblock URL \url{http://doi.acm.org/10.1145/253262.253266}.
+
+\bibitem[Chawathe et~al.(1996)Chawathe, Rajaraman, Garcia-Molina, and
+  Widom]{Chawathe96}
+S.~S. Chawathe, A.~Rajaraman, H.~Garcia-Molina, and J.~Widom.
+\newblock Change detection in hierarchically structured information.
+\newblock \emph{SIGMOD Rec.}, 25\penalty0 (2):\penalty0 493--504, June 1996.
+\newblock ISSN 0163-5808.
+\newblock \doi{10.1145/235968.233366}.
+\newblock URL \url{http://doi.acm.org/10.1145/235968.233366}.
+
+\bibitem[Foster et~al.(2007)Foster, Greenwald, Kirkegaard, Pierce, and
+  Schmitt]{Pierce07}
+J.~N. Foster, M.~B. Greenwald, C.~Kirkegaard, B.~C. Pierce, and A.~Schmitt.
+\newblock Exploiting schemas in data synchronization.
+\newblock \emph{J. Comput. Syst. Sci.}, 73\penalty0 (4):\penalty0 669--689,
+  June 2007.
+\newblock ISSN 0022-0000.
+\newblock \doi{10.1016/j.jcss.2006.10.024}.
+\newblock URL \url{http://dx.doi.org/10.1016/j.jcss.2006.10.024}.
+
+\bibitem[Khanna et~al.(2007)Khanna, Kunal, and Pierce]{PierceDiff3}
+S.~Khanna, K.~Kunal, and B.~Pierce.
+\newblock A formal investigation of diff3.
+\newblock In V.~Arvind and S.~Prasad, editors, \emph{FSTTCS 2007: Foundations
+  of Software Technology and Theoretical Computer Science}, volume 4855 of
+  \emph{Lecture Notes in Computer Science}, pages 485--496. Springer Berlin
+  Heidelberg, 2007.
+\newblock ISBN 978-3-540-77049-7.
+\newblock \doi{10.1007/978-3-540-77050-3_40}.
+\newblock URL \url{http://dx.doi.org/10.1007/978-3-540-77050-3_40}.
+
+\bibitem[Lempsink et~al.(2009)Lempsink, Leather, and L\"{o}h]{Lemp09}
+E.~Lempsink, S.~Leather, and A.~L\"{o}h.
+\newblock Type-safe diff for families of datatypes.
+\newblock In \emph{Proceedings of the 2009 ACM SIGPLAN Workshop on Generic
+  Programming}, WGP '09, pages 61--72, New York, NY, USA, 2009. ACM.
+\newblock ISBN 978-1-60558-510-9.
+\newblock \doi{10.1145/1596614.1596624}.
+\newblock URL \url{http://doi.acm.org/10.1145/1596614.1596624}.
+
+\bibitem[Lindholm(2004)]{Lind04}
+T.~Lindholm.
+\newblock A three-way merge for {XML} documents.
+\newblock In \emph{Proceedings of the 2004 ACM Symposium on Document
+  Engineering}, DocEng '04, pages 1--10, New York, NY, USA, 2004. ACM.
+\newblock ISBN 1-58113-938-1.
+\newblock \doi{10.1145/1030397.1030399}.
+\newblock URL \url{http://doi.acm.org/10.1145/1030397.1030399}.
+
+\bibitem[Lindholm and Rüger(2005)]{Lind05}
+T.~Lindholm and T.~Rüger.
+\newblock A fault-tolerant three-way merge for {XML} and {HTML}.
+\newblock In \emph{Proceedings of the Ninth {IASTED} International Conference
+  on Internet and Multimedia Systems and Applications}, pages 71--76, 2005.
+\newblock URL \url{http://www.hiit.fi/files/fi/fc/papers/ctl-euroIMSA.pdf}.
+
+\bibitem[Marlow(2010)]{Marlow_haskell2010}
+S.~Marlow.
+\newblock Haskell 2010 language report, 2010.
+
+\bibitem[Mens(2002)]{Mens02}
+T.~Mens.
+\newblock A state-of-the-art survey on software merging.
+\newblock \emph{IEEE Trans. Softw. Eng.}, 28\penalty0 (5):\penalty0 449--462,
+  May 2002.
+\newblock ISSN 0098-5589.
+\newblock \doi{10.1109/TSE.2002.1000449}.
+\newblock URL \url{http://dx.doi.org/10.1109/TSE.2002.1000449}.
+
+\bibitem[Mimram and Di~Giusto(2013)]{CategoryPatchTheory}
+S.~Mimram and C.~Di~Giusto.
+\newblock A categorical theory of patches.
+\newblock \emph{Electron. Notes Theor. Comput. Sci.}, 298:\penalty0 283--307,
+  Nov. 2013.
+\newblock ISSN 1571-0661.
+\newblock \doi{10.1016/j.entcs.2013.09.018}.
+\newblock URL \url{http://dx.doi.org/10.1016/j.entcs.2013.09.018}.
+
+\bibitem[O'Sullivan(2009)]{Mercurial}
+B.~O'Sullivan.
+\newblock \emph{Mercurial - The Definitive Guide: Modern Software for
+  Collaboration.}
+\newblock O'Reilly, 2009.
+\newblock ISBN 978-0-596-80067-3.
+
+\bibitem[Peters(2005)]{PetersSurvey}
+L.~Peters.
+\newblock Change detection in xml trees: A survey, June 2005.
+
+\bibitem[Pierce and Vouillon(2004)]{UnisonSpec}
+B.~C. Pierce and J.~Vouillon.
+\newblock What's in {U}nison? {A} formal specification and reference
+  implementation of a file synchronizer.
+\newblock Technical Report MS-CIS-03-36, Dept. of Computer and Information
+  Science, University of Pennsylvania, 2004.
+
+\bibitem[Pierce et~al.(2003)Pierce, Schmitt, and Greenwald]{HarmonyOverview}
+B.~C. Pierce, A.~Schmitt, and M.~B. Greenwald.
+\newblock Bringing {H}armony to optimism: {A} synchronization framework for
+  heterogeneous tree-structured data.
+\newblock Technical Report MS-CIS-03-42, University of Pennsylvania, 2003.
+\newblock Superseded by MS-CIS-05-02.
+
+\newpage
+
+\bibitem[Ramsey and Csirmaz(2001)]{Ramsey01}
+N.~Ramsey and E.~Csirmaz.
+\newblock An algebraic approach to file synchronization.
+\newblock \emph{SIGSOFT Softw. Eng. Notes}, 26\penalty0 (5):\penalty0 175--185,
+  Sept. 2001.
+\newblock ISSN 0163-5948.
+\newblock \doi{10.1145/503271.503233}.
+\newblock URL \url{http://doi.acm.org/10.1145/503271.503233}.
+
+\bibitem[Westfechtel(1991)]{Westfechtel91}
+B.~Westfechtel.
+\newblock Structure-oriented merging of revisions of software documents.
+\newblock In \emph{Proceedings of the 3rd International Workshop on Software
+  Configuration Management}, SCM '91, pages 68--79, New York, NY, USA, 1991.
+  ACM.
+\newblock ISBN 0-89791-429-5.
+\newblock \doi{10.1145/111062.111071}.
+\newblock URL \url{http://doi.acm.org/10.1145/111062.111071}.
+
+\end{thebibliography}
+
+% We recommend abbrvnat bibliography style.
 \bibliographystyle{abbrvnat}
 
-% The bibliography should be embedded for final submission.
-\bibliography{svc}
+%\bibliography{svc}
 
 % \softraggedright
-
 
 % \end{thebibliography}
 
