Set Times New Roman main font

--- a/main.tex
+++ b/main.tex
@@ -39,9 +39,9 @@
 \usepackage{minted} % Code listing with reasonable good highlighting
 %\usepackage{bussproofs}   % For typing judgments
 \usepackage[no-math]{fontspec}
+\setmainfont{Times New Roman}
 \setmonofont[Scale=MatchLowercase]{Apple Symbols} % Unicode mono font
 
-%\usepackage{mathptmx} % Times new roman font
 
 \usepackage[dvipsnames]{xcolor}  		% Color package
 \definecolor{dgreen}{rgb}{0.,0.6,0.}    % Deep green
