Centered numbers in tables

--- a/main.tex
+++ b/main.tex
@@ -42,6 +42,8 @@
 \setmainfont{Times New Roman}
 \setmonofont[Scale=MatchLowercase]{Apple Symbols} % Unicode mono font
 
+\usepackage{array}
+\setlength{\extrarowheight}{1.5pt}
 
 \usepackage[dvipsnames]{xcolor}  		% Color package
 \definecolor{dgreen}{rgb}{0.,0.6,0.}    % Deep green
