--- a/main.tex
+++ b/main.tex
@@ -836,7 +836,7 @@ Requirement \ref{req:diff-specs}.
 % diff-suff :  (x : HList xs) (y : HList ys) → Diff x y (diff x y)
 % \end{minted}
 
-\section{Generic diff$_3$}
+\section{Generic diff3}
 \label{sec:generic-diff3}
 The \texttt{diff3} algorithm takes as input three objects, the
 original version called \emph{base} and two new replicas, and it
@@ -1185,7 +1185,7 @@ Operator \texttt{⊔₃} merges \emph{aligned} edit scripts\footnote{We
 % 	only with respect to it. Furthermore, it provides an additional constructor
 % 	for conflicts. 
 
-        \subsection{Diff$_3$ Algorithm}
+        \subsection{Diff3 Algorithm}
         \label{subsec:diff3-algo}
 % 	The merge operator for edit scripts takes two aligned edit scripts and
 % 	applies the merge operator \texttt{⊔} previously defined to
