--- a/main.tex
+++ b/main.tex
@@ -90,7 +90,9 @@
 
 \newcommand{\nil}{\textcolor{blue}{\texttt{[]}}}
 \newcommand{\cons}{\texttt{(\textcolor{blue}{∷})}}
+\newcommand{\consn}{\texttt{⟨ \textcolor{blue}{∷} ⟩}}
 \newcommand{\num}[1]{\textcolor{magenta}{\texttt{#1}}}
+\newcommand{\gnop}{\textcolor{dgreen}{Nop}}
 
 \usepackage{graphicx}
 \graphicspath{ {images/} }
@@ -863,7 +865,7 @@ because the target index has not the right shape, i.e. \texttt{[Int] ≠
 Well-formed edit scripts, such as that of the previous example can
 still be constructed.
 \begin{Verbatim}[commandchars=\\\{\}]
-e : ES [List Int] [List Int]
+e : ES [ List Int ] [ List Int ]
 e = [Upd \cons \cons, Upd \num{0} \num{1}, Ins \cons, Ins \num{2}, Upd \nil \nil]
 \end{Verbatim}
 Figure \ref{fig:embedding} shows that script \texttt{e} embeds nodes of 
@@ -945,13 +947,13 @@ However, the algorithm does not work directly on the replicas, but
 relies on a \texttt{diff} algorithm to compute two edit scripts that
 describe the changes from base to each of the new versions.
 %
-It then generates an edit script by merging the edits contained in
+It then generates an edit script by merging the edits contained in the
 edit scripts: the \emph{source} of the merged script is the base
 object and the \emph{target} is the merged object.
 %
-Nevertheless, edits cannot always be automatically reconciled.  When
-this happens, a conflict is detected and reported to the user, who has
-to manually merge the conflicting changes.
+Nevertheless, edits cannot always be automatically reconciled, hence,
+when this happens, a conflict is detected and reported to the user,
+who has to manually merge the conflicting changes.
 %
 % \todo{More discussion about different design choices, persistent etc
 %   ...}		
@@ -962,11 +964,11 @@ The merging strategy employed in our \texttt{diff3} algorithm for
 algebraic data types consists in applying the \emph{three-way merge}
 technique at the node level.
 %
-Informally, the algorithm compares corresponding parts of two objects
-and of their base version, when two parts disagree, the base version
-is examined: a conflict is detected if each version is different,
-otherwise the version that changed from base is chosen.
-	
+Informally, this technique compares corresponding parts of two objects
+and, when they disagree, examine the base version: a conflict is
+detected if the three versions are all different, otherwise the version that
+changed from base is used in the merged object.
+%	
 To put this strategy on a formal footing, we give precise definitions
 of corresponding parts of objects and conflicts, on top of which, we
 define a sound merging semantics.
@@ -1014,30 +1016,25 @@ Consider the lists \texttt{x = [1]}, \texttt{y = [0,1]} and \texttt{z
 %
 Edit scripts \texttt{e₁} and \texttt{e₂} represent the \texttt{diff}
 between \texttt{x} and \texttt{y} and \texttt{z}
-respectively\footnote{In this example \texttt{Cpy α} stands for \texttt{Upd α α}}.
-\begin{minted}{agda}
+respectively\footnote{In this example \texttt{Cpy α} stands for \texttt{Upd α α}.}.
+\begin{Verbatim}[commandchars=\\\{\}]
 e₁ e₂ : ES [ List Int ] [ List Int ]
-e₁ = [Ins  (::), Ins  0, Cpy (::), Cpy 1, Cpy []]
-e₂ = [Cpy (::), Cpy 1, Ins  (::), Ins  2, Cpy []] 
-\end{minted}       
-%
-% \begin{minted}{agda}
-% e₁ e₂ : ES [ List Int ] [ List Int ]
-% e₁ = [Ins (::), Ins 1, Cpy (::), Cpy 1,                 Cpy []]
-% e₂ = [                Cpy (::), Cpy 1, Ins (::), Ins 2, Cpy []] 
-% \end{minted}       
+e₁ = [Ins  \cons, Ins  \num{0}, Cpy \cons, Cpy \num{1}, Cpy \nil]
+e₂ = [Cpy \cons, Cpy \num{1}, Ins  \cons, Ins  \num{2}, Cpy \nil] 
+\end{Verbatim}       
+
 The edit scripts \texttt{e₁} and \texttt{e₂} are \emph{not} aligned, because
-their first edits are not, namely \texttt{∅ ≢ ⟨ :: ⟩}, where
-\texttt{∅} is the source value of \texttt{Ins (::)} in \texttt{e₁} and
-\texttt{⟨ :: ⟩} is the source value of \texttt{Cpy (::)} in
+their first edits are not, namely \texttt{∅ ≢ \consn}, where
+\texttt{∅} is the source value of \texttt{Ins \cons} in \texttt{e₁} and
+\consn\ is the source value of \texttt{Cpy \cons} in
 \texttt{e₂}.
 
 Interestingly, alignment can be recovered by inserting no-operation
 edits in these points.
-\begin{minted}{agda}
-e₁* = [Ins (::), Ins 0, Cpy (::), Cpy 1, Nop   , Nop , Cpy []]
-e₂* = [Nop   , Nop , Cpy (::), Cpy 1, Ins (::), Ins 2, Cpy []] 
-\end{minted}
+\begin{Verbatim}[commandchars=\\\{\}]
+e₁* = [Ins \cons, Ins \num{0}, Cpy \cons, Cpy \num{1}, \gnop   , \gnop , Cpy \nil]
+e₂* = [\gnop   , \gnop , Cpy \cons, Cpy \num{1}, Ins \cons, Ins \num{2}, Cpy \nil] 
+\end{Verbatim}       
 
 In the following, we use notation \texttt{e ⊑ e*} to denote that edit
 script \texttt{e*} extends script \texttt{e} with a finite number of
@@ -1091,7 +1088,7 @@ introduce new conflicts, since they are \emph{identity} edits.
 
 \subsection{Semantics of Merge and Conflict}
 \label{subsec:merge-semantics}
-We formalize the three-way merge technique, by defining a sound
+We formalize the three-way merge technique by defining a sound
 semantics of merge and conflict over aligned edits.
 %
 Two aligned edits contain at most three distinct values: one common
@@ -1099,10 +1096,11 @@ source and two, possibly different, targets, which are treated as
 corresponding parts.  
 %
 If no more than two of them are different, it is possible to merge the
-edits, producing an edit that combines both.
+edits producing an edit that combines both.
 %
 However, if the values are all different, then there is no edit that
-comprises both edits: any edit would leave out at least one of them.
+comprises both edits.
+%edits: any edit would leave out at least one of them.
 %
 When this happens, three-way merge refuses to back out any edit, but
 fails and triggers a conflict instead.
@@ -1185,8 +1183,8 @@ same change and could be merged applying the \texttt{Idem} rule.
 %
 Given these inequalities the corresponding conflict is uniquely
 determined, i.e. for any concrete choice of \texttt{u}, \texttt{v} and
-\texttt{w} that are all different, the conflict \texttt{c} is uniquely
-determined.
+\texttt{w} that are all different, there exists one and only one
+conflict \texttt{c} of type \texttt{Conflict u v w}.
 %
 As a result, also the semantics of conflict is minimal, because it
 contains only one axiom, yet complete, because it can encode all true
@@ -1232,7 +1230,7 @@ have omitted the obvious inequalities in conflicts.
 %
 Operator \texttt{⊔₃} merges \emph{aligned} edit scripts\footnote{We
   extend edit script with a special constructor \_::ᶜ\_ for
-  conflicts}, by applying operator \texttt{⊔} pairwise, i.e.\
+  conflicts.}, by applying operator \texttt{⊔} pairwise, i.e.\
 \texttt{e₁ ⊔₃ e₂ = zipWith (⊔) e₁ e₂}.
  
 %
@@ -1401,15 +1399,15 @@ their fusion should also be well-typed.
 
 \paragraph{Example} Consider for instance the following \emph{aligned}
 edit scripts:
-\begin{minted}{agda}
+\begin{Verbatim}[commandchars=\\\{\}]
 e₁ e₂ : ES [] [List Int]
-e₁ = [Ins [], Nop]
-e₂ = [Nop, Ins []]
-\end{minted}
-The merge operator \texttt{e₁ ⊔₃ e₂} yields script \texttt{[Ins [],
-  Ins []]}, which is conflict-free, yet ill-typed, because the first
-insert produces a constructor that does not take any arguments, but
-the tail of the script yields another empty list as argument.
+e₁ = [Ins \cons, Nop  , Ins \num{1}, Ins \nil]
+e₂ = [Nop    , Ins \nil, Nop , Nop  ]
+\end{Verbatim}
+The merge operator \texttt{e₁ ⊔₃ e₂} yields script \texttt{[Ins \cons,
+  Ins \nil, Ins \num{1}, Ins \nil]} , which is conflict-free, yet
+ill-typed, because script \texttt{[Ins \num{1}, Ins \nil]} does not
+yield a list of integer, as required by \texttt{\cons}.
 %
 The culprit is that operator \texttt{⊔₃} merges edits \emph{pairwise},
 therefore the whole merged script may alternatively follow either of
@@ -1491,8 +1489,8 @@ In this section we present and motivate our design choices, while in
 Section \ref{sec:related-work}, we discuss and compare them with
 possible alternatives.
 %
-We show that our algorithms meet these choices, by defining properties
-that clearly describe their semantics.
+We show that our algorithms comply with these choices, by defining
+properties that clearly describe their semantics.
 %
 We remark that we have formalized and mechanically verified these
 properties in Agda, using the model presented in this paper.
@@ -1502,8 +1500,8 @@ denote that edit \texttt{f} and conflict \texttt{c} occurs in script
 \texttt{e} respectively and \texttt{α ∈ hs} if node \texttt{α}
 occurs in list \texttt{hs}.
 %
-Furthermore, we consider only edit-related conflicts \texttt{c :
-  Conflict u v w}.
+Furthermore, we consider only edit-related conflicts, that is
+\texttt{c : Conflict u v w}, and ignore type errors.
   
 \subsection{Conflict Conditions}
 The semantics of widespread merging algorithms, such as GNU
@@ -1519,10 +1517,10 @@ conditions, that will trigger a conflict in a merge.
 %
 \begin{thm}[Conflict Conditions]
 \label{thm:conflict-conds}
-  Given objects \texttt{o}, \texttt{x}, \texttt{y}, 
-  then \texttt{diff3 x o y} raises a conflict \texttt{c} if and only if
+  Given objects \texttt{x}, \texttt{y}, \texttt{z}, 
+  then \texttt{diff3 y x z} raises a conflict \texttt{c} if and only if
   there are two aligned edits \texttt{f} and \texttt{g}, such that
-  \texttt{f ∈ (diff o x)}, \texttt{g ∈ (diff o y)}, and \texttt{f ⊔ g ↥ c}.
+  \texttt{f ∈ (diff x y)}, \texttt{g ∈ (diff x z)}, and \texttt{f ⊔ g ↥ c}.
 \end{thm}
 Informally, Theorem \ref{thm:conflict-conds} asserts that merging
 results in a conflict uniquely if there are two edits that are
@@ -1553,9 +1551,10 @@ either inserted, replaced or discarded as a whole, ensuring users that
 their data may not corrupted in the diffing process.
 %
 Secondly, the \emph{edit origin} property gives further guarantees
-about the semantics of merge, namely that there is at least one script
-accountable for every edit found in a merged script ---both scripts
-may bear the same change independently (axiom \texttt{Idem}).
+about the semantics of merge, namely that there is \emph{at least one}
+script accountable for every edit found in a merged script ---both
+scripts may bear the same change independently, see constructor
+\texttt{Idem} in Section \ref{subsec:merge-semantics}.
 %
 %
 %We start with some auxiliary definitions and lemmas.
@@ -1602,7 +1601,7 @@ may bear the same change independently (axiom \texttt{Idem}).
 % If \texttt{e ⊢ ⟨ α ⟩ ⟼ v} then \texttt{α ∈ ⟪ e ⟫}.
 % Similarly if \texttt{e ⊢ v ⟼ ⟨ α ⟩} then \texttt{α ∈ ⟦ e ⟧}.
 % \end{prop}
-We now formally state the \emph{data origin} and \emph{edit origin} property.
+We now formally state the data and edit origin property.
 \begin{prop}[Data and Edit Origin]
 \label{prop:sanity}
 Let \texttt{α} be a node and \texttt{e = diff x y}:
@@ -1656,11 +1655,12 @@ the merged script, then it is part of either the input scripts, but it
 does not guarantee that any edit from the input scripts will actually
 end up in the merged script.
 %
-A merge operator that merely returns an empty script (i.e.\ \texttt{e₁ ⊔₃ e₂
-  = []}) would satisfy this property, but clearly it not very useful.
+For instance, a merge operator that merely returns an empty script
+(i.e.\ \texttt{e₁ ⊔₃ e₂ = []}) satisfies the edit origin property, but
+clearly it not very useful.
 %
 Proposition \ref{prop:maximality} proves \emph{maximality}, which
-forces the merge operator to yield every edit that can be obtained
+requires the merge operator to yield every edit that can be obtained
 by merging aligned edits from the input scripts.
 
 \begin{prop}[Maximality]
@@ -1752,14 +1752,13 @@ order between nodes and their relative positions, thus characterizing
 how the shape of structured data may change.
 %    
 
-\paragraph{Depth-First Pre-Order}
 An edit script describes how to transform a source object into a
-target object, by traversing the former in \emph{depth-first
-  pre-order} and mapping its nodes into the nodes of the latter.
+target object, by traversing the former in depth-first
+  pre-order and mapping its nodes into the nodes of the latter.
 %
-Interestingly, the embedding preserves depth-first pre-order: if a
+Interestingly, the embedding preserves depth-first pre-order: \emph{if a
 source node comes before another then the mapping of the first will
-come before the mapping of the second.
+come before the mapping of the second}.
 %
 However, nodes are not only mapped (updated) from the source to the
 target, but they may also be inserted and removed, therefore the
@@ -1767,9 +1766,8 @@ structural invariant must be adjusted to take these edits into
 account.
 %
 Intuitively the order is preserved because nodes that are mapped first
-in a script precede those that are mapped later ---since edit scripts
-are a flat list-like data structure, we simply order edits according
-to their position in the script.
+in a script precede those that are mapped later ---we simply order
+edits according to their position in the script.
 % %
 % A pre-order depth-first traversal consists of firstly visiting the
 % current node and then traversing recursively its subtrees from the
@@ -1779,7 +1777,6 @@ to their position in the script.
 % visited sooner come before those that are processed later.  Since edit
 % scripts work with list of trees, we have to generalize the ordering
 % accordingly.
-    
 % The type \texttt{hs ⊢ α ⊏ β} denotes that the node \texttt{α} comes
 % before the node \texttt{β}, according to depth first traversal of the
 % trees contained in the list of trees \texttt{hs}.  \todo{Probably drop
@@ -1788,18 +1785,15 @@ to their position in the script.
 % data _⊢_⊏_ : Hist xs → C as a → C bs b → Set where
 %   here : β ∈ (hs₁ +++ hs₂) → Node α hs₁ ∷ hs₂ ⊢ α ⊏ β
 %   there : (hs₁ +++ hs₂) ⊢ α ⊏ β → Node γ hs₁ ∷ hs₂ ⊢ α ⊏ β
-% \end{minted}
-
+% \end{minted
 % Intuitively the list is used as a stack, so that after visiting each
 % node its children, yet to be traversed, are pushed on the stack.  Note
 % that those trees will be visited before those already on the stack,
 % hence following correctly the depth-first traversal.
-
 % \begin{definition}[Edit Order]
 % Given an edit script \texttt{e} and two edits \texttt{f} and \texttt{g}, we write
 % \texttt{e ⊢ f ⊏ g} if and only if \texttt{f} precedes \texttt{g} in \texttt{e}.
 % \end{definition}
-
 % Before stating the main theorem relies on two fundamental properties:
 % that the target (source) function and \texttt{diff} are
 % \emph{order-preserving} (OP).
@@ -1812,7 +1806,6 @@ to their position in the script.
 % target (source) object a node precedes another, then in the diff
 % script the first node is produced by an edit that comes before the
 % edit that produces the second.
-
 % \begin{prop}[\texttt{⟦\_⟧} is OP]
 % \label{prop:order-preserving-target-fun}
 % Let \texttt{e} be an edit script and \texttt{f} and \texttt{g} edits
@@ -1820,7 +1813,6 @@ to their position in the script.
 % \texttt{e ⊢ f ⊏ g}, then \texttt{⟦ e ⟧ ⊢ α ⊏ β}.
 % \end{prop}
 %   We omit the symmetrical property for \emph{source} nodes and objects.
-
 % \begin{prop}[Embedding is OP]
 % \label{prop:order-preserving-embedding}
 % Let \texttt{x} and \texttt{y} be heterogeneous lists and let 
@@ -1841,11 +1833,9 @@ to their position in the script.
 %   exists \texttt{g : v ⟼ ⟨ β ⟩} in the tail of \texttt{e}.
 % \end{proof}
 % We again omit the dual property for \emph{source} nodes and object.
-
-\paragraph{Order Invariant}
-The order-invariant property ensures that \texttt{diff} preserves the
-depth-first order of the source (target) objects:
-
+The structural invariant property ensures that \texttt{diff} preserves
+the depth-first ordering of the source nodes. We omit the corresponding
+property about the target nodes.
 
 % If \texttt{α} precedes \texttt{β} in the source object of script
 % \texttt{e}, then one of the following holds:
@@ -1864,7 +1854,7 @@ depth-first order of the source (target) objects:
 %
     % We show only the theorem about the \emph{source} object, because
     % the other is symmetrical.
-\begin{thm}[\texttt{diff} is OP]
+\begin{thm}[Structural Invariant]
 Let \texttt{e = diff x y} and nodes \texttt{α} and \texttt{β},
 such that \texttt{α} precedes \texttt{β} in \texttt{x}.
 Then one of the following holds.
@@ -1878,6 +1868,12 @@ Then one of the following holds.
   %   ⟩}, \texttt{e ⊢ ⟨ β ⟩ ⟼ ⟨ φ ⟩} and \texttt{y ⊢ γ ⊏ φ}.
 \end{itemize}
 \end{thm}
+
+Note that, thanks to permissive Requirement \ref{req:diff-specs},
+this property holds also when merging, specifically by instantiating
+\texttt{x} with \emph{base}, \texttt{e} with the merged script
+obtained by \texttt{⊔₃} and \texttt{y} with the merged object.
+
 % \begin{proof}
 %   By Proposition \ref{prop:order-preserving-embedding} there are edits
 %   \texttt{f : ⟨ α ⟩ ⟼ u} and \texttt{g : ⟨ β ⟩ ⟼ v}, such that
@@ -1952,7 +1948,7 @@ which instantiates the first index with the type of its arguments and
 the second with the resulting type.
 %
 \paragraph{Example}
-For example, data type \texttt{ListC} encodes the list constructors:
+Data type \texttt{ListC} encodes the list constructors:
 \begin{minted}{haskell}
 data ListC (as :: [ * ]) (a :: *) where
   Nil :: ListC '[] [a]
@@ -2145,7 +2141,8 @@ in order to take into account update edits, whose cost is given by the
 % \end{minted}
 %
 Observe that using discrete distance, a single update edit is
-preferred to a delete and a subsequent insert.
+preferred to a delete and a subsequent insert and ``copies'' over
+proper updates.
 %
 \paragraph{Patch}
 Our library provides also a generic \texttt{patch} function, which corresponds
@@ -2170,16 +2167,16 @@ an ill-typed script.
 Our library merges objects in this way by means of function \texttt{gdiff3}:
 \begin{minted}{haskell}
 gdiff3 :: Diff a => a → a → a → Either [Conflict] (ES '[ a ] '[ a ])
-gdiff3 x o y = typecheck $ merge e1 e2
-  where e1 = gdiff [ toHTree o ] [ toHTree x ]
-         e2 = gdiff [ toHTree o ] [ toHTree y ]
+gdiff3 y x z = typecheck $ merge e1 e2
+  where e1 = gdiff [ toHTree x ] [ toHTree y ]
+         e2 = gdiff [ toHTree x ] [ toHTree z ]
 \end{minted}
 The input objects are transformed into our generic encoding by
 \texttt{toHTree} and diffed with respect to the original version.
 %
 For the sake of brevity, we lift list syntax to heterogeneous lists,
-so that \texttt{[ toHTree o ] :: HList '[ a ]} is a singleton list
-containing the \texttt{HTree a} representation of \texttt{o}.
+so that \texttt{[ toHTree x ] :: HList '[ a ]} is a singleton list
+containing the \texttt{HTree a} representation of \texttt{x}.
 %
 Edit scripts \texttt{e₁} and \texttt{e₂} are merged by function
 \texttt{merge}, which implements the merge operator \texttt{⊔₃}.
